refactor(defaultTheme): remove legacy compat API guard

--- a/src/tpl/defaultTheme/frontend/index.html
+++ b/src/tpl/defaultTheme/frontend/index.html
@@ -90,7 +90,7 @@
 {{end}}
 {{end}}
 {{if .SubItemsHtml}}
-<div class="panel filter" id="panel-filter">
+<div class="panel filter">
 	<div class="form">
 		<input type="text" accesskey="r" placeholder="{{.Trans.FilterLabel}}"/>
 		<button type="reset">X</button>
